--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <title>Song</title>
 </head>
+
 <body>
+    <header class="splash">
+        <div class="splash-inner">
+            <div class="container">
+                <h1>Tytuł</h1>
+                <h2>Tytuł</h2>
+            </div>
+        </div>>
+    </header>>
+
+    <p>tekst piosenki
+
+
+
+    </p>>
     
 </body>
 </html>
