Add style for body

--- a/index.html
+++ b/index.html
@@ -10,44 +10,37 @@
 </head>
 
 <body>
-    <header class="splash">
-        <div class="splash-inner">
-            <div class="container">
+     <section class="container">
+            <div class="song">
                 <h1>W MALINOWYM CHRUŚNIAKU</h1>
                 <h2>Bolesław Leśmian</h2>
-            </div>
-        </div>>
-    </header>>
-    <section class="container">
-        <div class="song">
-            <p>W ma­li­no­wym chru­śnia­ku, przed cie­ka­wych wzro­kiem</br>
-                Za­po­dzia­ni po gło­wy, przez dłu­gie go­dzi­ny</br>
-                Zry­wa­li­śmy przy­by­łe tej nocy ma­li­ny.</br>
-                Pal­ce mia­łaś na oślep skrwa­wio­ne ich so­kiem.
-            </p>>
-            <p>Bąk zło­śnik hu­czał ba­sem, jak­by stra­szył kwia­ty,</br>
-                Rdza­we guzy na słoń­cu wy­grze­wał liść cho­ry,</br>
-                Złach­ma­nia­łych pa­ję­czyn skrzy­ły się wi­sio­ry</br>
-                I szedł ty­łem na grzbie­cie ja­kiś żuk ko­sma­ty. 
-            </p>>
-            <p> Dusz­no było od ma­lin, któ­reś, szap­cząc, rwa­ła,</br>
-                A szept nasz tyl­ko wów­czas na­ci­chał w ich woni,</br>
-                Gdym war­ga­mi wy­gar­niał z po­da­nej mi dło­ni</br>
-                Owo­ce, prze­po­jo­ne wo­nią twe­go cia­ła.</br>
-            </p>>
-            <p> I sta­ły się ma­li­ny na­rzę­dziem piesz­czo­ty</br>
-                Tej pierw­szej, tej zdzi­wio­nej, któ­ra w ca­łym nie­bie</br>
-                Nie zna in­nych upo­jeń, oprócz sa­mej sie­bie,</br>
-                I chce się wciąż po­wta­rzać dla wła­snej dzi­wo­ty. </br>
-            </p>> 
-            <p>
-                I nie wiem, jak się sta­ło, w któ­rym oka­mgnie­niu, </br>
-                Żeś do­tknę­ła mi war­gą spo­co­ne­go czo­ła, </br>
-                Po­rwa­łem two­je dło­nie - od­da­łaś w sku­pie­niu, </br>
-                A chru­sniak ma­li­no­wy trwał wciąż do­oko­ła.
-            </p>>
-    </div>>
-</section>>
-    
+                <p>W ma­li­no­wym chru­śnia­ku, przed cie­ka­wych wzro­kiem</br>
+                    Za­po­dzia­ni po gło­wy, przez dłu­gie go­dzi­ny</br>
+                    Zry­wa­li­śmy przy­by­łe tej nocy ma­li­ny.</br>
+                    Pal­ce mia­łaś na oślep skrwa­wio­ne ich so­kiem.
+                </p>
+                <p>Bąk zło­śnik hu­czał ba­sem, jak­by stra­szył kwia­ty,</br>
+                    Rdza­we guzy na słoń­cu wy­grze­wał liść cho­ry,</br>
+                    Złach­ma­nia­łych pa­ję­czyn skrzy­ły się wi­sio­ry</br>
+                    I szedł ty­łem na grzbie­cie ja­kiś żuk ko­sma­ty. 
+                </p>
+                <p> Dusz­no było od ma­lin, któ­reś, szap­cząc, rwa­ła,</br>
+                    A szept nasz tyl­ko wów­czas na­ci­chał w ich woni,</br>
+                    Gdym war­ga­mi wy­gar­niał z po­da­nej mi dło­ni</br>
+                    Owo­ce, prze­po­jo­ne wo­nią twe­go cia­ła.</br>
+                </p>
+                <p> I sta­ły się ma­li­ny na­rzę­dziem piesz­czo­ty</br>
+                    Tej pierw­szej, tej zdzi­wio­nej, któ­ra w ca­łym nie­bie</br>
+                    Nie zna in­nych upo­jeń, oprócz sa­mej sie­bie,</br>
+                    I chce się wciąż po­wta­rzać dla wła­snej dzi­wo­ty. </br>
+                </p>
+                <p>
+                    I nie wiem, jak się sta­ło, w któ­rym oka­mgnie­niu, </br>
+                    Żeś do­tknę­ła mi war­gą spo­co­ne­go czo­ła, </br>
+                    Po­rwa­łem two­je dło­nie - od­da­łaś w sku­pie­niu, </br>
+                    A chru­sniak ma­li­no­wy trwał wciąż do­oko­ła.
+                </p>
+        </div>
+    </section>
 </body>
 </html>
